--- a/k256/Cargo.toml
+++ b/k256/Cargo.toml
@@ -19,7 +19,7 @@ rust-version = "1.65"
 
 [dependencies]
 cfg-if = "1.0"
-elliptic-curve = { version = "0.13", default-features = false, features = ["hazmat", "sec1"] }
+elliptic-curve = { git = "https://github.com/zmovane/traits", branch = "fix/deps", package = "elliptic-curve", default-features = false, features = ["hazmat", "sec1"] }
 
 # optional dependencies
 once_cell = { version = "1.17", optional = true, default-features = false }
